layout bug, centering article content

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -76,6 +76,7 @@ td {
 .single:not(.single-photoalbum) .article,
 .error404 .article {
  max-width: 54em;
+ margin: 0 auto;
 }
 
 .article-image-post {
